--- a/apps/nextjs/src/app/globals.css
+++ b/apps/nextjs/src/app/globals.css
@@ -79,6 +79,10 @@
         box-shadow: 0 10px 4px 0 rgba(0, 0, 0, 0.25);
         @apply bg-white text-secondary pl-6 py-3 h-14 border-none rounded-2xl w-72 sm:w-144
     }
+    .jumbo-select-content {
+        box-shadow: 0 10px 4px 0 rgba(0, 0, 0, 0.25);
+        @apply bg-white text-secondary border-none
+    }
 }
 
 .test1 {
