--- a/apps/nextjs/src/app/globals.css
+++ b/apps/nextjs/src/app/globals.css
@@ -55,16 +55,17 @@
     }
 
     .jumbo-checkbox {
-        @apply h-20 w-20 shadow-xl
+        box-shadow: 0 10px 4px 0 rgba(0, 0, 0, 0.25);
+        @apply sm:h-20 sm:w-20 rounded-md bg-white border-none
     }
 
     .jumbo-radio {
         box-shadow: 0 10px 4px 0 rgba(0, 0, 0, 0.25);
-        @apply h-20 w-20 rounded-md bg-white border-none
+        @apply sm:h-20 sm:w-20 rounded-md bg-white border-none
     }
     .jumbo-button {
         box-shadow: 0 7px 4px 0 rgba(0, 0, 0, 0.25);
-        @apply rounded-full h-20 w-144 text-2.5xl font-bold
+        @apply rounded-full h-20 sm:w-160 sm:text-3xl font-bold
     }
 
     .jumbo-radio-label {
