--- a/apps/nextjs/src/app/globals.css
+++ b/apps/nextjs/src/app/globals.css
@@ -51,7 +51,7 @@
 
 @layer utilities {
     .page-container {
-        @apply flex items-center justify-center h-screen py-8 text-primary
+        @apply flex flex-col items-center justify-center h-screen py-8 text-primary
     }
     .jumbo-checkbox {
         box-shadow: 0 10px 4px 0 rgba(0, 0, 0, 0.25);
