--- a/apps/nextjs/src/app/globals.css
+++ b/apps/nextjs/src/app/globals.css
@@ -51,34 +51,33 @@
 
 @layer utilities {
     .page-container {
-        @apply flex flex-col items-center justify-center h-screen py-8 text-primary
+        @apply flex flex-col items-center md:justify-center h-screen md:py-8 text-primary
     }
     .jumbo-checkbox {
         box-shadow: 0 10px 4px 0 rgba(0, 0, 0, 0.25);
-        @apply sm:h-10 sm:w-10 rounded-md bg-white border-none
+        @apply h-6 w-6 sm:h-8 sm:w-8 lg:h-10 lg:w-10 rounded-md bg-white border-none
     }
     .jumbo-radio {
         box-shadow: 0 10px 4px 0 rgba(0, 0, 0, 0.25);
-        @apply sm:h-20 sm:w-20 rounded-md bg-white border-none
+        @apply h-10 w-10 md:h-16 md:w-16 lg:h-20 lg:w-20 rounded-md bg-white border-none
+    }
+    .jumbo-radio-label {
+        @apply text-sm md:text-lg text-secondary font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70
+    }
+    .jumbo-radio-indicator {
+        @apply h-9 w-9 md:h-16 md:w-16 lg:h-20 lg:w-20 fill-current text-current
     }
     .jumbo-button {
         box-shadow: 0 7px 4px 0 rgba(0, 0, 0, 0.25);
-        @apply rounded-full h-20 sm:w-160 sm:text-3xl font-bold
+        @apply rounded-full h-14 w-72 text-xl md:w-128 md:h-20 lg:w-160 md:text-3xl font-bold
     }
     .jumbo-textarea {
         box-shadow: 0 10px 4px 0 rgba(0, 0, 0, 0.25);
-        @apply rounded-xl sm:text-xl sm:w-160 text-secondary placeholder:text-secondary/50 sm:placeholder:text-lg p-4
-    }
-    .jumbo-radio-label {
-        @apply text-lg text-secondary font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70
-    }
-
-    .jumbo-radio-indicator {
-        @apply sm:h-20 sm:w-20 fill-current text-current
+        @apply rounded-xl sm:text-xl w-72 md:w-128 lg:w-160 text-secondary placeholder:text-secondary/50 sm:placeholder:text-lg p-4
     }
     .jumbo-select-trigger {
         box-shadow: 0 10px 4px 0 rgba(0, 0, 0, 0.25);
-        @apply bg-white text-secondary pl-6 py-3 h-14 border-none rounded-2xl w-72 sm:w-144
+        @apply bg-white text-secondary pl-6 py-3 md:h-14 border-none rounded-2xl w-72 md:w-144
     }
     .jumbo-select-content {
         box-shadow: 0 10px 4px 0 rgba(0, 0, 0, 0.25);
@@ -87,6 +86,12 @@
     .jumbo-input {
         box-shadow: 0 10px 4px 0 rgba(0, 0, 0, 0.25);
         @apply bg-white text-secondary border-none rounded-lg w-72 sm:w-144 pl-6 sm:h-14 sm:text-xl placeholder:text-secondary/50
+    }
+    .question-title {
+        @apply text-2xl md:text-4xl lg:text-6xl font-bold text-center
+    }
+    .question-hint {
+        @apply hidden md:flex text-stone-500 text-center
     }
 }
 
