--- a/turbo/generators/templates/package.json.hbs
+++ b/turbo/generators/templates/package.json.hbs
@@ -1,5 +1,5 @@
 {
-  "name": "@1goal/{{ name }}",
+  "name": "@peakquest/{{ name }}",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -14,17 +14,17 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@1goal/eslint-config": "workspace:^0.2.0",
-    "@1goal/prettier-config": "workspace:^0.1.0",
-    "@1goal/tsconfig": "workspace:^0.1.0",
+    "@peakquest/eslint-config": "workspace:^0.2.0",
+    "@peakquest/prettier-config": "workspace:^0.1.0",
+    "@peakquest/tsconfig": "workspace:^0.1.0",
     "eslint": "^8.56.0",
     "prettier": "^3.1.1",
     "typescript": "^5.3.3"
   },
   "eslintConfig": {
     "extends": [
-      "@1goal/eslint-config/base"
+      "@peakquest/eslint-config/base"
     ]
   },
-  "prettier": "@1goal/prettier-config"
+  "prettier": "@peakquest/prettier-config"
 }
